# teach-service

./: .gitignore  mydb.sqlite  pyproject.toml
config/: .env.example
server/: urls.py
server/apps/answers/: apps.py
server/apps/answers/migrations/: 0001_initial.py
server/apps/answers/models/: __init__.py  base.py  few_variants_answer.py  match_answer.py  order_answer.py  short_answer.py
server/apps/answers/services/: __init__.py
server/apps/courses/: admin.py  models.py  urls.py  views.py
server/apps/courses/migrations/: 0001_initial.py  0002_alter_course_access_limiter_alter_page_answer.py  0003_section_parent.py  0004_remove_section_parent.py  0005_section_parent.py
server/apps/courses/serializers/: contents.py  course_patching.py  course_posting.py  page.py
server/apps/courses/services/: contents.py  page.py
server/apps/courses/services/course/: __init__.py  _pages.py  _patching.py  _posting.py  _sections.py
server/settings/: base.py  local.py
teach_service/: db.sqlite3  env.json  manage.py
teach_service/courses/: admin.py  models.py
teach_service/courses/migrations/: 0001_initial.py
teach_service/teach_service/: environment_variables.py  settings.py  urls.py
